arrays more accurate

--- a/GeeksforGeeks/recursion.ipynb
+++ b/GeeksforGeeks/recursion.ipynb
@@ -72,10 +72,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  c  b  bc  a  ac  ab  abc  "
+     ]
+    }
+   ],
+   "source": [
+    "# finding all the subsets of given string\n",
+    "def fun(str='abc',curr='',index=0):\n",
+    "    if index == len(str):\n",
+    "        print(curr,\" \",end='')\n",
+    "        return\n",
+    "    fun(str,curr,index=index+1)\n",
+    "    fun(str,curr+str[index],index=index+1)\n",
+    "    \n",
+    "fun()"
+   ]
   }
  ],
  "metadata": {
