--- a/GeeksforGeeks/Arrays.ipynb
+++ b/GeeksforGeeks/Arrays.ipynb
@@ -175,6 +175,68 @@
     "\n",
     "print(fun([2,3,10,6,4,8,1]))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13\n"
+     ]
+    }
+   ],
+   "source": [
+    "#stoke buy and sell\n",
+    "def fun(prices):\n",
+    "    profit = 0\n",
+    "    for i in range(1,len(prices)):\n",
+    "        if prices[i] > prices[i-1]:\n",
+    "            profit+= prices[i] - prices[i-1]\n",
+    "    else:\n",
+    "        return profit\n",
+    "    \n",
+    "print(fun([1,5,3,8,12]))  # max profit is 13"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "#trapping the rain water efficient solution theta(n)\n",
+    "\n",
+    "def trapping_rain(blocks):\n",
+    "    lmax = [0] * len(blocks)\n",
+    "    rmax = [0] * len(blocks)\n",
+    "    res = 0\n",
+    "    lmax[0] = blocks[0]\n",
+    "    for i in range(1,len(blocks)):\n",
+    "        lmax[i] = max(blocks[i],blocks[i-1])\n",
+    "        \n",
+    "    rmax[len(blocks)-1] = blocks[len(blocks)-1]\n",
+    "    for i in range(len(blocks)-2,0,-1):\n",
+    "        rmax[i] = max(blocks[i],blocks[i+1])\n",
+    "        \n",
+    "    for i in range(1,len(blocks)-1):\n",
+    "        res+=min(lmax[i],rmax[i]) - blocks[i]\n",
+    "        \n",
+    "    return res\n",
+    "\n",
+    "print(trapping_rain([5,0,6,2,3]))"
+   ]
   }
  ],
  "metadata": {
